@@ -35,6 +35,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #10755: Add the posix.fdlistdir() function.  Patch by Ross Lagerwall.
+
 - Issue #4761: Add the *at() family of functions (openat(), etc.) to the posix
   module.  Patch by Ross Lagerwall.
 
